CMBSandbox4/src/objects/Bill_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>Bill Line Items</relationshipLabel>
        <relationshipName>Bill_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill Line Items</relationshipLabel>
        <relationshipName>Bill_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uploaded in salesforce</inlineHelpText>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <label>Bill Line Item</label>
    <nameField>
        <label>Bill Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>